@@ -131,9 +131,9 @@ soundLowPass=0
 # 0=false, anything else for true
 soundReverse=0
 
-# Remove GBA intros
+# Remove GBA intros (not supported anymore)
 # 0=false, anything else for true
-removeIntros=0
+# removeIntros=0
 
 # Save Type
 # 0=automatic, 1=EEPROM, 2=SRAM, 3=Flash, 4=EEPROM+Sensor, 5=NONE
